--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,9 +19,23 @@
                 "gitlens.showWhatsNewAfterUpgrades": false,
             },
             "extensions": [
+                // Documentation
                 "MS-CEINTL.vscode-language-pack-fr",
                 "bierner.markdown-mermaid",
-                "bpruitt-goddard.mermaid-markdown-syntax-highlighting"
+                "bpruitt-goddard.mermaid-markdown-syntax-highlighting",
+
+                // Formatting
+                "esbenp.prettier-vscode",
+
+                // Git
+                "eamodio.gitlens",
+
+                // Angular
+                "johnpapa.Angular2",
+                "dbaeumer.vscode-eslint",
+
+                // Other
+                "christian-kohler.path-intellisense"
             ]
         }
     }
