Test code coverage

--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -26,3 +26,8 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm run testCI
+
+    - name: Test angular action
+      uses:  demyanets/angular-coverage-badges-action@v1
+      with:
+        coverage-summary-path: ./coverage/wizard-score-board/coverage-summary.json
