--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -39,7 +39,17 @@ jobs:
         coverage-summary-path: ./coverage/wizard-score-board/coverage-summary.json
         github_token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Quality Build Control
+    - id: set_coverage_var
       run: |
-        coverage = `cat ./coveragee/wizard-score-board/coverage-summary.json`
+        coverage=`cat ./coveragee/wizard-score-board/coverage-summary.json`
+        # the following lines are only required for multi line json
+        content="${content//'%'/'%25'}"
+        content="${content//$'\n'/'%0A'}"
+        content="${content//$'\r'/'%0D'}"
+        # end of optional handling for multi line json
+        echo "::set-output name=coverage::$content"
+
+    - name: Quality Build Control
+      run: echo "${{fromJson(steps.set_coverage_var.outputs.coverage).total.lines.total}}"
+
 
