--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -53,7 +53,7 @@ jobs:
 
     - name: Quality Build Control
       run: |
-        echo "${{steps.set_coverage_var.outputs.coverage}}"
-        echo "${{fromJson(steps.set_coverage_var.outputs.coverage).total.lines.total}}"
+        echo "${steps.set_coverage_var.outputs.coverage}"
+        echo "${fromJson(steps.set_coverage_var.outputs.coverage).total.lines.total}"
 
 
