--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -45,7 +45,9 @@ jobs:
         echo "coverage=$(jq -c . < ./coverage/wizard-score-board/coverage-summary.json)'" >> $GITHUB_OUTPUT
 
     - name: Quality Build Control Failed
-      if: ${{ fromJSON(steps.set_coverage_var.outputs.coverage).total.lines.pct }} < 110 && ${{ fromJSON(steps.set_coverage_var.outputs.coverage).total.branches }} < 110
+      env:
+        QUALITY_PCT: 110
+      if: ${{ fromJSON(steps.set_coverage_var.outputs.coverage).total.lines.pct }} < env.QUALITY_PCT && ${{ fromJSON(steps.set_coverage_var.outputs.coverage).total.branches }} < env.QUALITY_PCT
       run: exit 1
 
 
